fix bug with nav on mobile

--- a/ecom_website/styles.css
+++ b/ecom_website/styles.css
@@ -572,7 +572,7 @@ footer {
   }
 
   .header__description {
-    padding-top: 84px;
+    margin-top: 64px;
   }
 }
 
